--- a/index.html
+++ b/index.html
@@ -129,6 +129,56 @@ tbody tr:hover{background:rgba(255,255,255,.04)}
   opacity:0;transition:.3s
 }
 .toast.show{opacity:1}
+
+  /* ================= WALKTHROUGH ================= */
+.walkthrough-overlay{
+  position:fixed;
+  inset:0;
+  background:rgba(5,7,20,.72);
+  backdrop-filter:blur(6px);
+  z-index:2000;
+  display:none;
+}
+
+.walkthrough-overlay.show{display:block}
+
+.walkthrough-card{
+  position:fixed;
+  max-width:360px;
+  background:linear-gradient(180deg, rgba(255,255,255,.12), rgba(255,255,255,.04));
+  border:1px solid rgba(255,255,255,.2);
+  border-radius:16px;
+  padding:16px;
+  z-index:2001;
+  box-shadow:0 20px 40px rgba(0,0,0,.45);
+}
+
+.walkthrough-card h3{
+  margin:0 0 6px;
+  font-size:1rem;
+}
+
+.walkthrough-card p{
+  margin:0 0 12px;
+  font-size:.9rem;
+  opacity:.9;
+}
+
+.walkthrough-actions{
+  display:flex;
+  justify-content:flex-end;
+  gap:8px;
+}
+
+.walkthrough-spotlight{
+  position:fixed;
+  border-radius:18px;
+  box-shadow:
+    0 0 0 9999px rgba(5,7,20,.72),
+    0 0 40px rgba(0,240,255,.35);
+  transition:.3s;
+  z-index:2000;
+}
 </style>
 </head>
 
@@ -259,6 +309,106 @@ function resolve(t){
 }
 
 render();
+  /* ================= GUIDED WALKTHROUGH ================= */
+
+const WT_STEPS = [
+  {
+    title: "Welcome to Takumi",
+    text: "Takumi is an AI-powered quality and risk command center designed to surface high-risk customer interactions before they escalate.",
+    target: ".hero"
+  },
+  {
+    title: "Executive KPIs",
+    text: "At a glance, leaders see unresolved risk, resolution velocity, and overall quality health across channels.",
+    target: ".kpis"
+  },
+  {
+    title: "High-Risk Queue",
+    text: "Takumi automatically flags interactions with compliance, tone, or accuracy risks so managers can act immediately.",
+    target: "h2:contains('High-Risk')"
+  },
+  {
+    title: "Live Audits",
+    text: "Audits are generated from both AI analysis and human QA, ensuring reliability and explainability.",
+    target: "h2:contains('Live Audits')"
+  },
+  {
+    title: "Closing the Loop",
+    text: "Risk isn’t just identified — it’s resolved. Managers can act directly from the queue.",
+    target: "#queueBody"
+  },
+  {
+    title: "Explore Freely",
+    text: "This demo uses synthetic data for illustration. In production, Takumi connects to live ticketing, call, and chat systems.",
+    target: null
+  }
+];
+
+let wtIndex = 0;
+const wtOverlay = document.getElementById('wtOverlay');
+const wtCard = document.getElementById('wtCard');
+const wtSpot = document.getElementById('wtSpotlight');
+const wtTitle = document.getElementById('wtTitle');
+const wtText = document.getElementById('wtText');
+const wtNext = document.getElementById('wtNext');
+
+function qsSafe(sel){
+  try{ return document.querySelector(sel); }catch{ return null; }
+}
+
+function showStep(i){
+  const step = WT_STEPS[i];
+  wtTitle.textContent = step.title;
+  wtText.textContent = step.text;
+
+  wtOverlay.classList.add('show');
+  wtCard.style.top = '20px';
+  wtCard.style.right = '20px';
+
+  if(step.target){
+    const el = qsSafe(step.target);
+    if(el){
+      const r = el.getBoundingClientRect();
+      wtSpot.style.display = 'block';
+      wtSpot.style.top = r.top - 8 + 'px';
+      wtSpot.style.left = r.left - 8 + 'px';
+      wtSpot.style.width = r.width + 16 + 'px';
+      wtSpot.style.height = r.height + 16 + 'px';
+    }
+  }else{
+    wtSpot.style.display = 'none';
+  }
+}
+
+wtNext.onclick = ()=>{
+  wtIndex++;
+  if(wtIndex >= WT_STEPS.length){
+    wtOverlay.classList.remove('show');
+    wtCard.style.display = 'none';
+    wtSpot.style.display = 'none';
+    return;
+  }
+  showStep(wtIndex);
+};
+
+// Auto-start walkthrough (portfolio mode)
+setTimeout(()=>{
+  wtCard.style.display = 'block';
+  showStep(0);
+}, 800);
+
 </script>
+
+  <!-- Walkthrough -->
+<div class="walkthrough-overlay" id="wtOverlay"></div>
+<div class="walkthrough-card" id="wtCard">
+  <h3 id="wtTitle"></h3>
+  <p id="wtText"></p>
+  <div class="walkthrough-actions">
+    <button class="btn" id="wtNext">Next</button>
+  </div>
+</div>
+<div class="walkthrough-spotlight" id="wtSpotlight"></div>
+
 </body>
 </html>
