--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Takumi — Command Center</title>
+<title> Kaizen — Command Center</title>
 
 <style>
 /* ================= THEME (UNCHANGED) ================= */
@@ -186,14 +186,14 @@ tbody tr:hover{background:rgba(255,255,255,.04)}
 <div class="wrap">
 
 <div class="titlebar">
-  <h1>Takumi — Command Center</h1>
+  <h1>Kaizen — Command Center</h1>
   <div style="opacity:.7;font-size:.75rem">Demo data • Portfolio proof of concept</div>
 </div>
 
 <div class="card hero">
   <div class="hero-grid">
     <div class="hero-copy">
-      <h2>Takumi</h2>
+      <h2>Kaizen</h2>
       <p class="sysline">Lemuel’s Quality & AI Red-Flag System</p>
       <p class="miniTag">Crafted with Monozukuri spirit</p>
     </div>
@@ -324,8 +324,8 @@ render();
 
 const WT_STEPS = [
   {
-    title: "Welcome to Takumi",
-    text: "Takumi is an AI-powered quality and risk command center designed to surface high-risk customer interactions before they escalate.",
+    title: "Welcome to Kaizen",
+    text: "Kaizen is an AI-powered quality and risk command center designed to surface high-risk customer interactions before they escalate.",
     target: ".hero"
   },
   {
@@ -335,7 +335,7 @@ const WT_STEPS = [
   },
   {
     title: "High-Risk Queue",
-    text: "Takumi automatically flags interactions with compliance, tone, or accuracy risks so managers can act immediately.",
+    text: "Kaizen automatically flags interactions with compliance, tone, or accuracy risks so managers can act immediately.",
     target: "h2:contains('High-Risk')"
   },
   {
@@ -350,7 +350,7 @@ const WT_STEPS = [
   },
   {
     title: "Explore Freely",
-    text: "This demo uses synthetic data for illustration. In production, Takumi connects to live ticketing, call, and chat systems.",
+    text: "This demo uses synthetic data for illustration. In production, Kaizen connects to live ticketing, call, and chat systems.",
     target: null
   }
 ];
