--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,350 +3,228 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Michael Nortey — Systems Command</title>
+<title>Michael Nortey — Systems Architect</title>
 
 <style>
 :root{
-  --bg:#0B1020;
-  --panel:rgba(255,255,255,.06);
-  --panel2:rgba(255,255,255,.02);
-  --line:rgba(255,255,255,.12);
+  --bg:#0f141c;
+  --panel:rgba(255,255,255,.04);
+  --border:rgba(255,255,255,.08);
   --text:#e8f7ff;
-  --cyan:#00E5FF;
-  --green:#46FF9A;
-  --purple:#A88CFF;
+  --muted:#9fb3c8;
+  --accent:#00c8ff;
 }
-
-/* ================= GLOBAL ================= */
 
 html,body{
   margin:0;
-  background:
-  radial-gradient(1200px 800px at 50% 0%, #121832 0%, #0B1020 60%, #05070e 100%);
+  background:var(--bg);
   color:var(--text);
-  font-family:Inter,system-ui;
-  overflow-x:hidden;
+  font-family:Inter,system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
 }
-
-/* Animated tactical grid */
-body::before{
-  content:"";
-  position:fixed;
-  inset:0;
-  background:
-    linear-gradient(rgba(0,229,255,.05) 1px, transparent 1px),
-    linear-gradient(90deg, rgba(0,229,255,.05) 1px, transparent 1px);
-  background-size:50px 50px;
-  animation:gridMove 30s linear infinite;
-  pointer-events:none;
-}
-
-@keyframes gridMove{
-  from{background-position:0 0,0 0;}
-  to{background-position:0 50px,50px 0;}
-}
-
-/* ================= BOOT SCREEN ================= */
-
-#boot{
-  position:fixed;
-  inset:0;
-  background:#05070e;
-  color:var(--cyan);
-  font-family:monospace;
-  padding:40px;
-  z-index:2000;
-  display:flex;
-  align-items:center;
-}
-
-#bootText{
-  line-height:1.6;
-  font-size:.9rem;
-}
-
-/* ================= MAIN WRAP ================= */
 
 .wrap{
-  max-width:1300px;
-  margin:40px auto 100px;
-  padding:0 20px;
-  display:none;
+  max-width:1100px;
+  margin:80px auto;
+  padding:0 24px;
 }
 
-/* Header */
-.header{
-  text-align:center;
-  margin-bottom:40px;
+h1,h2,h3{
+  margin:0 0 16px;
+  font-weight:600;
 }
 
-.header h1{
-  margin:0;
-  font-size:clamp(38px,6vw,64px);
-  font-weight:900;
-  text-shadow:0 0 40px rgba(0,229,255,.25);
+p{
+  color:var(--muted);
+  line-height:1.6;
 }
 
-.sub{
-  margin-top:12px;
-  opacity:.75;
-  letter-spacing:3px;
-  font-size:.8rem;
+.section{
+  margin-bottom:100px;
 }
 
-/* Panel */
-.panel{
-  background:linear-gradient(180deg,var(--panel),var(--panel2));
-  border:1px solid var(--line);
-  border-radius:24px;
-  backdrop-filter:blur(14px);
-  padding:40px;
-  box-shadow:0 30px 60px rgba(0,0,0,.5);
+.hero h1{
+  font-size:clamp(36px,5vw,52px);
 }
 
-/* Health Rings */
-.health{
-  display:flex;
-  gap:30px;
-  justify-content:center;
-  margin-bottom:40px;
+.hero p{
+  font-size:1.1rem;
+  max-width:650px;
 }
 
-.ring{
-  width:120px;
-  height:120px;
-  border-radius:50%;
-  background:conic-gradient(var(--cyan) 75%, rgba(255,255,255,.08) 0%);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:bold;
-  box-shadow:0 0 40px rgba(0,229,255,.25);
-}
-
-/* Systems Grid */
-.systems{
+.grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:25px;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:24px;
 }
 
-.system{
-  padding:24px;
-  border-radius:18px;
-  border:1px solid var(--line);
-  position:relative;
-  cursor:pointer;
-  transition:.3s;
-}
-
-.system:hover{
-  transform:translateY(-6px);
-  border-color:var(--cyan);
-  box-shadow:0 0 50px rgba(0,229,255,.25);
-}
-
-.status{
-  position:absolute;
-  top:18px;
-  right:18px;
-  font-size:.7rem;
-  padding:4px 10px;
-  border-radius:999px;
-  border:1px solid var(--green);
-  background:rgba(70,255,154,.15);
-}
-
-/* Console */
-.console{
-  margin-top:40px;
-  background:#050914;
-  padding:20px;
+.card{
+  background:var(--panel);
+  border:1px solid var(--border);
   border-radius:16px;
-  border:1px solid var(--line);
-  font-family:monospace;
+  padding:28px;
+  transition:.25s ease;
+}
+
+.card:hover{
+  border-color:var(--accent);
+  transform:translateY(-4px);
+}
+
+.card h3{
+  margin-bottom:10px;
+}
+
+.meta{
   font-size:.85rem;
+  color:var(--accent);
+  margin-bottom:12px;
 }
 
-/* Modal */
-.modal{
-  position:fixed;
-  inset:0;
-  background:rgba(5,7,20,.85);
-  backdrop-filter:blur(8px);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:1000;
+.kpis{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(160px,1fr));
+  gap:30px;
+  text-align:center;
 }
 
-.modal-content{
-  width:min(1000px,90vw);
-  background:linear-gradient(180deg,var(--panel),var(--panel2));
-  border:1px solid var(--cyan);
-  border-radius:24px;
-  padding:30px;
-  box-shadow:0 0 60px rgba(0,229,255,.3);
-  animation:scaleIn .3s ease;
+.kpi-number{
+  font-size:2rem;
+  font-weight:600;
+  color:var(--accent);
 }
 
-@keyframes scaleIn{
-  from{transform:scale(.95);opacity:0;}
-  to{transform:scale(1);opacity:1;}
+.kpi-label{
+  font-size:.9rem;
+  color:var(--muted);
 }
-
-iframe{
-  width:100%;
-  height:500px;
-  border:none;
-  border-radius:12px;
-  margin-top:20px;
-}
-
-.close{
-  text-align:right;
-  cursor:pointer;
-  opacity:.7;
-}
-
-.close:hover{opacity:1;}
 
 .footer{
   margin-top:80px;
-  text-align:center;
-  opacity:.5;
-  font-size:.8rem;
+  padding-top:40px;
+  border-top:1px solid var(--border);
+  font-size:.9rem;
+  color:var(--muted);
 }
+
+a{
+  color:var(--accent);
+  text-decoration:none;
+}
+
+a:hover{
+  text-decoration:underline;
+}
+
 </style>
 </head>
 
 <body>
 
-<div id="boot">
-  <div id="bootText"></div>
+<div class="wrap">
+
+<!-- HERO -->
+<div class="section hero">
+  <h1>Michael Nortey</h1>
+  <p>
+    Systems Architect focused on AI-driven operational intelligence, 
+    customer experience governance, and scalable enterprise automation. 
+    I design structured systems that improve risk visibility, decision quality, 
+    and performance outcomes.
+  </p>
 </div>
 
-<div class="wrap" id="main">
+<!-- SYSTEMS -->
+<div class="section">
+  <h2>Selected Systems</h2>
 
-<div class="header">
-  <h1>Systems Command Interface</h1>
-  <div class="sub">AI • CX • ARCHITECTURE • INTELLIGENCE</div>
-</div>
-<div class="panel">
+  <div class="grid">
 
-<!-- ===== AI CORE VISUAL ===== -->
-<div style="display:flex;justify-content:center;margin-bottom:40px;">
-  <div style="
-    width:180px;
-    height:180px;
-    border-radius:50%;
-    background:radial-gradient(circle,rgba(0,229,255,.6),#02060a 70%);
-    box-shadow:0 0 80px rgba(0,229,255,.5);
-    animation:pulse 3s infinite ease-in-out;">
+    <div class="card">
+      <div class="meta">AI Risk & Quality Engine</div>
+      <h3>Kaizen Intelligence Framework</h3>
+      <p>
+        Real-time red-flag detection and structured quality governance 
+        across customer service operations.
+      </p>
+      <p><a href="kaizen.html">View System →</a></p>
+    </div>
+
+    <div class="card">
+      <div class="meta">Legal Technology</div>
+      <h3>Litigation Intelligence Engine</h3>
+      <p>
+        Structured case strength modelling and legal evaluation 
+        framework for strategic litigation positioning.
+      </p>
+      <p><a href="#">View System →</a></p>
+    </div>
+
+    <div class="card">
+      <div class="meta">Enterprise Infrastructure</div>
+      <h3>Multi-Country Telephony Architecture</h3>
+      <p>
+        Centralised VOIP deployment improving CSAT, governance, 
+        and operational oversight across regions.
+      </p>
+      <p><a href="#">View Case Study →</a></p>
+    </div>
+
+    <div class="card">
+      <div class="meta">Customer Intelligence</div>
+      <h3>360° Voice of Customer System</h3>
+      <p>
+        AI-based sentiment and theme extraction across structured 
+        and unstructured feedback channels.
+      </p>
+      <p><a href="#">View System →</a></p>
+    </div>
+
   </div>
 </div>
 
-<div class="health">
-  <div class="ring">95%</div>
-  <div class="ring" style="background:conic-gradient(var(--green) 88%, rgba(255,255,255,.08) 0%);">88%</div>
-  <div class="ring" style="background:conic-gradient(var(--purple) 76%, rgba(255,255,255,.08) 0%);">76%</div>
+<!-- IMPACT -->
+<div class="section">
+  <h2>Measured Impact</h2>
+
+  <div class="kpis">
+    <div>
+      <div class="kpi-number">95%</div>
+      <div class="kpi-label">Quality Score</div>
+    </div>
+    <div>
+      <div class="kpi-number">+21%</div>
+      <div class="kpi-label">CSAT Improvement</div>
+    </div>
+    <div>
+      <div class="kpi-number">13%</div>
+      <div class="kpi-label">Audit Volume Above Target</div>
+    </div>
+    <div>
+      <div class="kpi-number">63%</div>
+      <div class="kpi-label">Revenue Growth Influence</div>
+    </div>
+  </div>
 </div>
 
-<div class="systems">
-
-<div class="system" onclick="launchModule('Kaizen AI','https://your-kaizen-link.com')">
-  <div class="status">ONLINE</div>
-  <h3>AI Risk Intelligence</h3>
-  <p>Real-time red flag & quality governance system.</p>
+<!-- PHILOSOPHY -->
+<div class="section">
+  <h2>Operating Philosophy</h2>
+  <p>
+    My work is grounded in Kaizen and Monozukuri principles — continuous improvement, 
+    structured experimentation, and governance-first system design. 
+    I focus on building resilient frameworks rather than isolated tools, 
+    ensuring AI and automation integrate responsibly into enterprise workflows.
+  </p>
 </div>
 
-<div class="system" onclick="launchModule('Legal Engine','https://your-legal-link.com')">
-  <div class="status">ACTIVE</div>
-  <h3>Litigation Intelligence</h3>
-  <p>Structured legal case strength analysis.</p>
-</div>
-
-<div class="system" onclick="launchModule('VOIP Transformation','https://your-voip-case-link.com')">
-  <div class="status">DEPLOYED</div>
-  <h3>Telephony Architecture</h3>
-  <p>Multi-country centralized VOIP deployment.</p>
-</div>
-
-</div>
-
-<div class="console" id="console">
-> System online<br>
-> Uptime: <span id="uptime"></span><br>
-> Awaiting command...
-</div>
-
-</div>
-
+<!-- FOOTER -->
 <div class="footer">
-© Michael Nortey — Systems Architect
+  Connect: 
+  <a href="https://linkedin.com" target="_blank">LinkedIn</a> • 
+  <a href="https://github.com" target="_blank">GitHub</a>
 </div>
 
 </div>
-
-<div class="modal" id="modal">
-  <div class="modal-content">
-    <div class="close" onclick="closeModal()">✕ Close</div>
-    <h2 id="modalTitle"></h2>
-    <iframe id="moduleFrame"></iframe>
-  </div>
-</div>
-
-<script>
-
-/* Boot sequence */
-const bootLines = [
-"Initializing Systems Command...",
-"Loading AI modules...",
-"Calibrating intelligence engines...",
-"Authenticating user...",
-"Access Granted.",
-"Launching Interface..."
-];
-
-let i = 0;
-function boot(){
-  if(i < bootLines.length){
-    document.getElementById("bootText").innerHTML += bootLines[i] + "<br>";
-    i++;
-    setTimeout(boot, 600);
-  } else {
-    setTimeout(()=>{
-      document.getElementById("boot").style.display="none";
-      document.getElementById("main").style.display="block";
-    },500);
-  }
-}
-boot();
-
-/* Uptime Clock */
-let startTime = Date.now();
-setInterval(()=>{
-  let diff = Date.now() - startTime;
-  let sec = Math.floor(diff/1000)%60;
-  let min = Math.floor(diff/60000)%60;
-  let hr = Math.floor(diff/3600000);
-  document.getElementById("uptime").textContent =
-  `${hr}h ${min}m ${sec}s`;
-},1000);
-
-/* Module Launch */
-function launchModule(title,url){
-  document.getElementById("modalTitle").textContent = title;
-  document.getElementById("moduleFrame").src = url;
-  document.getElementById("modal").style.display="flex";
-}
-
-function closeModal(){
-  document.getElementById("modal").style.display="none";
-  document.getElementById("moduleFrame").src="";
-}
-
-</script>
 
 </body>
 </html>
