--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Michael Nortey — Systems Architect</title>
+<title>Michael Lemuel Nortey </title>
 
 <style>
 :root{
@@ -124,12 +124,11 @@ a:hover{
 
 <!-- HERO -->
 <div class="section hero">
-  <h1>Michael Nortey</h1>
+  <h1>Michael 1Nortey</h1>
   <p>
-    Systems Architect focused on AI-driven operational intelligence, 
-    customer experience governance, and scalable enterprise automation. 
-    I design structured systems that improve risk visibility, decision quality, 
-    and performance outcomes.
+    I build and scale operational intelligence systems that strengthen governance, elevate customer experience performance, and embed responsible AI into enterprise environments.
+
+With leadership experience across regional quality strategy, CX transformation, and technology-driven process redesign, I focus on delivering measurable impact through structured execution, not isolated tools.
   </p>
 </div>
 
@@ -210,7 +209,7 @@ a:hover{
 <div class="section">
   <h2>Operating Philosophy</h2>
   <p>
-    My work is grounded in Kaizen and Monozukuri principles — continuous improvement, 
+    My work is grounded in the Kaizen principle— continuous improvement, 
     structured experimentation, and governance-first system design. 
     I focus on building resilient frameworks rather than isolated tools, 
     ensuring AI and automation integrate responsibly into enterprise workflows.
