--- a/Portfolio.html
+++ b/Portfolio.html
@@ -124,7 +124,7 @@ a:hover{
 
 <!-- HERO -->
 <div class="section hero">
-  <h1>Michael 1Nortey</h1>
+  <h1>Michael Lemuel Nortey</h1>
   <p>
     I build and scale operational intelligence systems that strengthen governance, elevate customer experience performance, and embed responsible AI into enterprise environments.
 
@@ -145,7 +145,7 @@ With leadership experience across regional quality strategy, CX transformation, 
         Real-time red-flag detection and structured quality governance 
         across customer service operations.
       </p>
-      <p><a href="kaizen.html">View System →</a></p>
+      <p><a href="https://lemuel09.github.io/AI-projects/">View System →</a></p>
     </div>
 
     <div class="card">
