--- a/Portfolio.html
+++ b/Portfolio.html
@@ -155,7 +155,7 @@ With leadership experience across regional quality strategy, CX transformation, 
         Structured case strength modelling and legal evaluation 
         framework for strategic litigation positioning.
       </p>
-      <p><a href="#">View System →</a></p>
+      <p><a href="https://script.google.com/macros/s/AKfycbwJxbFjYy7HywDl3WG3BmbkK-0gEuTPj09ZLOV0sVOOHeAv9_d-uMdUmkx0JSUUBlk/exec">View System →</a></p>
     </div>
 
     <div class="card">
